# simdhwyhash

./: CMakeLists.txt  README.md  highway-download.CMakeLists.txt.in  libsimdhwyhash.pc.in
cmake/: FindHWY.cmake
include/: simdhwyhash.h
src/: simdhwyhash.cc
tests/: simdhwyhash_test.cc
